Update 145. Binary Tree Postorder Traversal.md

--- a/145. Binary Tree Postorder Traversal.md
+++ b/145. Binary Tree Postorder Traversal.md
@@ -42,7 +42,68 @@ Follow up: Recursive solution is trivial, could you do it iteratively?
 # Solution
 
 ```
+//Iteratively
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
 
+class Solution {
+public:
+    // Function to perform postorder traversal of a binary tree and return the values in reverse order.
+    vector<int> postorderTraversal(TreeNode* root) 
+    {
+        // Vector to store the values of the nodes visited in postorder traversal.
+        vector<int> nums;
+        // Stack to hold nodes for traversal.
+        stack<TreeNode*> treeStack;
+
+        // If the tree is empty, return empty vector.
+        if (!root)
+        {
+            return nums;
+        }
+
+        // Push the root node onto the stack to start traversal.
+        treeStack.push(root);
+
+        // Perform iterative postorder traversal.
+        while (!treeStack.empty())
+        {       
+            // Get the top node from the stack.
+            root = treeStack.top();
+            // Remove the top node from the stack.
+            treeStack.pop();
+            // Add the value of the current node to the result vector.
+            nums.push_back(root->val);
+
+            // Push the left child onto the stack if it exists.
+            if (root->left)
+            {
+                treeStack.push(root->left);
+            }                              
+
+            // Push the right child onto the stack if it exists.
+            if (root->right)
+            {
+                treeStack.push(root->right);
+            }                  
+        }    
+
+        // Reverse the result vector to obtain the postorder traversal.
+        reverse(nums.begin(), nums.end());
+
+        // Return the postorder traversal.
+        return nums;
+    }
+};
 
 // Recursively
 /**
