Update 160. Intersection of Two Linked Lists.md

--- a/160. Intersection of Two Linked Lists.md
+++ b/160. Intersection of Two Linked Lists.md
@@ -1,6 +1,6 @@
 ```
 
-//Brute Forces: Time Complexity of O(n^{2})
+//Brute Forces: Time Complexity of O(n^2), Space Complexity of O(1)
 /**
 //  * Definition for singly-linked list.
 //  * struct ListNode {
