Update 160. Intersection of Two Linked Lists.md

--- a/160. Intersection of Two Linked Lists.md
+++ b/160. Intersection of Two Linked Lists.md
@@ -86,6 +86,52 @@ Follow up: Could you write a solution that runs in O(m + n) time and use only O(
 # Solution
 
 ```
+//Two Pointer Method: Time Complexity of O(m + n), Space Complexity of O(1) 
+/**
+ * Definition for singly-linked list.
+ * struct ListNode {
+ *     int val;
+ *     ListNode *next;
+ *     ListNode(int x) : val(x), next(NULL) {}
+ * };
+ */
+class Solution {
+public:
+    ListNode *getIntersectionNode(ListNode *headA, ListNode *headB) 
+    {
+        // Initialize pointers to the heads of the lists
+        ListNode* aList = headA;
+        ListNode* bList = headB;
+
+        // Loop until intersection or end of lists is reached
+        while(aList != bList)
+        {
+            // If the pointer to list A reaches the end, reset it to the head of list A
+            if (!aList)
+            {
+                aList = headA;
+            }
+            else // Move the pointer to the next node in list A
+            {
+                aList = aList->next;
+            }
+
+            // If the pointer to list B reaches the end, reset it to the head of list B
+            if (!bList)
+            {
+                bList = headB;
+            }
+            else // Move the pointer to the next node in list B
+            {
+                bList = bList->next;
+            }           
+        }
+
+        // Return the intersection node or nullptr if there is no intersection
+        return aList;
+        
+    }
+};
 
 
 //Brute Forces: Time Complexity of O(n^2), Space Complexity of O(1)
