--- a/168. Excel Sheet Column Title.md
+++ b/168. Excel Sheet Column Title.md
@@ -10,19 +10,18 @@ Difficulty: Easy
 
 Given an integer columnNumber, return its corresponding column title as it appears in an Excel sheet.
 
-For example:
-
->A -> 1
->
->B -> 2
->
->C -> 3
->
->Z -> 26
->
->AA -> 27
->
->AB -> 28 
+>For example:
+>>A -> 1
+>>
+>>B -> 2
+>>
+>>C -> 3
+>>
+>>Z -> 26
+>>
+>>AA -> 27
+>>
+>>AB -> 28 
 
 >Example 1:
 >
