Update 171. Excel Sheet Column Number.md

--- a/171. Excel Sheet Column Number.md
+++ b/171. Excel Sheet Column Number.md
@@ -57,8 +57,30 @@ Constraints:
 # Solution
 
 ```
+//Using a foreach loop
+class Solution {
+public:
+    int titleToNumber(string columnTitle) 
+    {
+        // Create storage for answer
+        int ans = 0;
 
+        // Create the place value of the letter within the string
+        int index = columnTitle.size() - 1;
 
+        // Iterate through the string
+        for (auto letter : columnTitle)
+        {
+            // Get the value of the string and times it by 26 to the power of the place value
+            ans += (letter - 64) * pow(26, index--);
+        }    
+
+        // Return the answer
+        return ans;
+    }
+};
+
+//Using a regular for loop
 // class Solution {
 // public:
 //     int titleToNumber(string columnTitle) 
