Update 242. Valid Anagram.md

--- a/NeetCode150/242. Valid Anagram.md
+++ b/NeetCode150/242. Valid Anagram.md
@@ -38,6 +38,41 @@ Follow up: What if the inputs contain Unicode characters? How would you adapt yo
 # Solution
 
 ```
+//Map Approach 
+class Solution {
+public:
+    bool isAnagram(string s, string t) 
+    {
+        // Create a map to store letters
+        unordered_map<char, int> mp;
+
+        // Inc the frequency of letters
+        for (auto letter : s)
+        {
+            mp[letter]++;
+        }
+
+        // Dec the frequency of letters
+        for (auto letter : t)
+        {
+            mp[letter]--;
+        }
+
+        // Go through the map to see if any frequency is a non-zero
+        for (auto letter : mp)
+        {
+            // If a non-zero
+            if (letter.second != 0)
+            {
+                return false;
+            }
+        }
+
+        // If letter frequencies are all zeros
+        return true;
+    }
+};
+
 //Ascii Approach
 class Solution {
 public:
