--- a/NeetCode150/1. Two Sum.md
+++ b/NeetCode150/1. Two Sum.md
@@ -40,7 +40,7 @@ Constraints:
 
 - -10<sup>9</sup> <= nums[i] <= 10<sup>9</sup>
 
-- -10<sup>9<sup> <= target <= 10<sup>9</sup>
+- -10<sup>9</sup> <= target <= 10<sup>9</sup>
 
 - Only one valid answer exists
  
