Update 1. Two Sum.md

--- a/NeetCode150/1. Two Sum.md
+++ b/NeetCode150/1. Two Sum.md
@@ -36,7 +36,7 @@ You can return the answer in any order.
  
 Constraints:
 
-- 2 <= nums.length <= 104
+- 2 <= nums.length <= 10<sup>4</sup>
 
 - -10<sup>9</sup> <= nums[i] <= 10<sup>9</sup>
 
