Update 238. Product of Array Except Self.md

--- a/NeetCode150/238. Product of Array Except Self.md
+++ b/NeetCode150/238. Product of Array Except Self.md
@@ -42,40 +42,75 @@ Follow up: Can you solve the problem in O(1) extra space complexity? (The output
 class Solution {
 public:
     vector<int> productExceptSelf(vector<int>& nums) 
-    {
-        // Get the size of the input array
-        int n = nums.size();
-
-        // Create two arrays, 'left' and 'right', both initialized with 1s.
-        // 'left' will store the product of all elements to the left of the current element.
-        // 'right' will store the product of all elements to the right of the current element.
-        vector<int> left(n, 1);
-        vector<int> right(n, 1);
+    {         
+        // Get the size of the input vector
+        int n = nums.size();  
         
-        // Calculate the product of all elements to the left of each element
-        for (int i = 1; i < n; i++)
-        {
-            left[i] = left[i - 1] * nums[i - 1];
-        }
-
-        // Calculate the product of all elements to the right of each element
-        for (int i = n - 2; i >= 0; i--)
-        {
-            right[i] = right[i + 1] * nums[i + 1];
-        }
-
-        // Initialize a result array 'ans' to store the final products
-        vector<int> ans(n);
-
-        // Calculate the final result by multiplying the corresponding 'left' and 'right' values
-        // for each element in the input array.
+        // Initialize a vector to store the result, filled with 1s initially
+        vector<int> ans(n, 1);
+      
+        // Calculate prefix products
+        int prefix = 1;
         for (int i = 0; i < n; i++)
         {
-            ans[i] = left[i] * right[i];
+            // Store the prefix product before current index in the result vector
+            ans[i] = prefix;
+            // Update prefix product for next iteration
+            prefix *= nums[i];
         }
-
-        // Return the final result array
+        
+        // Calculate postfix products
+        int postfix = 1;
+        for (int i = n - 1; i >= 0; i--)
+        {
+            // Multiply the postfix product to the prefix product stored at current index
+            ans[i] *= postfix;
+            // Update postfix product for next iteration
+            postfix *= nums[i];
+        }
+         
+        // Return the result vector
         return ans;
     }
 };
+
+// class Solution {
+// public:
+//     vector<int> productExceptSelf(vector<int>& nums) 
+//     {
+//         // Get the size of the input array
+//         int n = nums.size();
+
+//         // Create two arrays, 'left' and 'right', both initialized with 1s.
+//         // 'left' will store the product of all elements to the left of the current element.
+//         // 'right' will store the product of all elements to the right of the current element.
+//         vector<int> left(n, 1);
+//         vector<int> right(n, 1);
+        
+//         // Calculate the product of all elements to the left of each element
+//         for (int i = 1; i < n; i++)
+//         {
+//             left[i] = left[i - 1] * nums[i - 1];
+//         }
+
+//         // Calculate the product of all elements to the right of each element
+//         for (int i = n - 2; i >= 0; i--)
+//         {
+//             right[i] = right[i + 1] * nums[i + 1];
+//         }
+
+//         // Initialize a result array 'ans' to store the final products
+//         vector<int> ans(n);
+
+//         // Calculate the final result by multiplying the corresponding 'left' and 'right' values
+//         // for each element in the input array.
+//         for (int i = 0; i < n; i++)
+//         {
+//             ans[i] = left[i] * right[i];
+//         }
+
+//         // Return the final result array
+//         return ans;
+//     }
+// };
 ```
